# rust-carbon

./: .env  Cargo.toml  README
src/: main.rs  model.rs
src/middleware/: mod.rs
src/pages/: index.rs  mod.rs
src/pages/partials/: footer.rs  head.rs  mod.rs
src/public/css/: ege.css  main.css
src/public/js/: index.js
src/routes/: mod.rs  root.rs
src/routes/api/: mod.rs  note.rs  user.rs
