[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.2.1"
serde_json = "1"
futures-util = "0.3.25"
futures = "0.3"
mongodb = "2"
actix-files = "0.6.2"
env_logger = "0.9.3"
actix-utils = "3.0.1"
actix-session = { version="0.7.2", features = ["cookie-session"] }
log = { version = "0.4.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
maud = { version = "*", features = ["actix-web"] }